--- a/TreemapFolder/final-site/package.json
+++ b/TreemapFolder/final-site/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.0",
+    "@syncfusion/ej2-react-navigations": "^24.2.4",
     "clsx": "^2.1.0",
+    "python-shell": "^5.0.0",
     "react": "^18.2.0",
+    "react-d3-treemap": "^1.0.29",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
+    "@tailwindcss": "^3.1.8",
+    "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
